--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="https://beian.miit.gov.cn/" target="_blank">闽ICP备2021004148号-1</a>
+<p><a href="https://beian.miit.gov.cn/" target="_blank">闽ICP备2021004148号-1</a></p>
 </body>
 </html>
